Style header content and button

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     />
   </head>
   <body>
-    <header>
+    <header class="page-spacing">
       <nav>
         <a id="header-logo" href="./index.html">Header Logo</a>
         <ul id="navbar-links">
@@ -31,14 +31,14 @@
             This website has some subtext that goes here under the main title.
             It's a smaller font and the color is lower contrast
           </p>
-          <button class="page-btn" id="signup-btn">Sign Up</button>
+          <a class="page-btn" id="signup-btn" href="">Sign Up</a>
         </div>
         <div id="header-img">
           <p>this is a placeholder for an image</p>
         </div>
       </section>
     </header>
-    <section id="randominfo-section">
+    <section class="page-spacing" id="randominfo-section">
       <h2>Some random information.</h2>
       <div id="box-wrapper">
         <div class="box-item">
@@ -59,7 +59,7 @@
         </div>
       </div>
     </section>
-    <section>
+    <section class="page-spacing">
       <article id="quote-block">
         <p id="main-quote">
           This is an inspiring quote, or a testimonial from a customer. Maybe
@@ -69,7 +69,7 @@
         <p id="quote-author">-Thor, God of Thunder</p>
       </article>
     </section>
-    <section>
+    <section class="page-spacing">
       <article id="cta-block">
         <div id="cta-main-content">
           <h3>Call to action! It's time!</h3>
