Add 'random info' section styling and begin quote styling

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         </div>
       </div>
     </section>
-    <section class="page-spacing">
+    <section class="page-spacing" id="quote-section">
       <article id="quote-block">
         <p id="main-quote">
           This is an inspiring quote, or a testimonial from a customer. Maybe
