Complete styling cta section and footer

--- a/index.html
+++ b/index.html
@@ -69,16 +69,16 @@
         <p id="quote-author">-Thor, God of Thunder</p>
       </article>
     </section>
-    <section class="page-spacing">
+    <section class="page-spacing" id="cta-section">
       <article id="cta-block">
         <div id="cta-main-content">
           <h3>Call to action! It's time!</h3>
-          <p>
+          <p id="cta-subtext">
             Sign up for our product by clicking that button right over there!
           </p>
         </div>
-        <div id="cta-button">
-          <button class="page-btn" id="cta-btn">Sign up</button>
+        <div>
+          <a class="page-btn" id="cta-btn" href="">Sign Up</a>
         </div>
       </article>
     </section>
